[package]
name = "byteorder"
version = "1.2.7"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Library for reading/writing numbers in big-endian and little-endian."
documentation = "https://docs.rs/byteorder"
homepage = "https://github.com/BurntSushi/byteorder"
repository = "https://github.com/BurntSushi/byteorder"
readme = "README.md"
categories = ["encoding", "parsing"]
keywords = ["byte", "endian", "big-endian", "little-endian", "binary"]
license = "Unlicense OR MIT"
exclude = ["/ci/*"]

[lib]
name = "byteorder"
bench = false

[dev-dependencies]
quickcheck = { version = "0.8", default-features = false }
rand = "0.6"

[features]
default = ["std"]
std = []
i128 = []

[profile.bench]
opt-level = 3

[badges]
travis-ci = { repository = "BurntSushi/byteorder" }
